<resources>
    <string name="app_name">Book Store</string>

    <!--    Login Screen-->
    <string name="login_name">Login</string>
    <string name="sign_up_name">Sign Up</string>
    <string name="user_name">Username</string>
    <string name="password_name">Password</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="remember_me_check_box">Remember me</string>
    <string name="admin_name">I\'m an Admin</string>
    <string name="not_admin_name">I\'m not an Admin</string>

    <!--    SignUp Screen-->
    <string name="confirm_password_name">Confirm password</string>

    <!--    Drawer Menu-->
    <string name="home_title">Home</string>
    <string name="cart_title">Cart</string>
    <string name="my_order_title">My Order</string>
    <string name="profile_title">Profile</string>
    <string name="logout_title">Logout</string>

    <!--    Admin Drawer Menu-->
    <string name="category_title">Category</string>
    <string name="Orders_title">Orders</string>
    <string name="account_list_title">List Accounts</string>

    <!--    Navigation Drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="search_name">Search</string>

    <!--    Admin Category-->
    <string name="category_name">Book Category</string>
    <string name="science_book_name">Science &amp; Technology</string>
    <string name="text_book_name">Text</string>
    <string name="kid_book_name">Children</string>
    <string name="comic_book_name">Comic</string>
    <string name="political_book_name">Political</string>
    <string name="economy_book_name">Economy</string>
    <string name="foreign_language_book_name">Foreign Language</string>
    <string name="history_book_name">History</string>
    <string name="maintain_product_name">Maintain Products</string>
    <string name="check_new_orders_name">Check New Orders</string>
    <string name="logout_name">Logout</string>

    <!--    Add New Product-->
    <string name="new_product_name">Add New Book</string>
    <string name="product_name">Name</string>
    <string name="product_price">Price</string>
    <string name="product_quantity">Quantity</string>
    <string name="product_author">Author</string>
    <string name="product_release_date">Release Date</string>
    <string name="product_description">Description</string>
    <string name="not_add_book_yet">You have not added any books</string>

    <!--    Item Book-->
    <string name="item_book_name">Book name</string>
    <string name="item_book_price">Book price</string>
    <string name="item_book_quantity">Quantity</string>

    <!--    Detail Book-->
    <string name="book_detail_name">Details</string>
    <string name="book_category_name">Category</string>
    <string name="book_author_name">Author</string>
    <string name="book_release_date_name">Publication date</string>
    <string name="add_to_cart_name">Add to cart</string>
    <string name="add_to_borrow_name">Add to borrow</string>

    <!--    Profile-->
    <string name="fullname_name">Full name</string>
    <string name="sex_name">Sex</string>
    <string name="phonenumber_name">Phone number</string>
    <string name="address_name">Address</string>
    <string name="email_name">Email</string>

    <!--    Cart-->
    <string name="total_price_name">Total price</string>
    <string name="order_name">Order</string>
    <string name="not_cart_yet">You have no cart yet</string>

    <!--    Account List-->
    <string name="item_user_name">Username</string>
    <string name="item_password_name">Password</string>
    <string name="item_full_name">Fullname</string>
    <string name="item_sex_name">Sex</string>
    <string name="item_phone_name">Phone</string>
    <string name="item_email_name">Email</string>
    <string name="item_address_name">Address</string>
    <string name="no_account_yet">You have no customer account yet</string>

    <!--    Detail Account List-->
    <string name="detail_user_name">Username:</string>
    <string name="detail_password_name">Password:</string>
    <string name="detail_full_name">Fullname:</string>
    <string name="detail_sex_name">Sex:</string>
    <string name="detail_phone_name">Phone:</string>
    <string name="detail_email_name">Email:</string>
    <string name="detail_address_name">Address:</string>

    <!--    Payment Method-->
    <string name="payment_method_name">Payment Method</string>
    <string name="pay_with_cash_name">Pay with Cash</string>
    <string name="pay_with_paypal_name">Pay with Paypal</string>
    <string name="pay_with_mastercard_name">Pay with Mastercard</string>

    <!--    Admin New Orders-->
    <string name="new_orders_name">New Orders</string>
    <string name="item_orders_id">Order ID</string>
    <string name="item_orders_full_name">Full Name</string>
    <string name="item_orders_username">Username</string>
    <string name="item_orders_phone_number">Phone number</string>
    <string name="item_orders_total_price">Total price</string>
    <string name="item_orders_address">Address</string>
    <string name="item_orders_date_time">Date Time</string>
    <string name="item_orders_state_ship">State Ship</string>
    <string name="show_item_products">Show Books</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="not_new_order_yet">You have no orders from anyone yet</string>

    <!--    Admin User Product-->
    <string name="user_product_name">Books</string>

    <!--    Address Order-->
    <string name="address_order_name">Is this your address ?</string>
    <string name="confirm_order_name">Confirm Order</string>

    <!--    My Order-->
    <string name="not_order_yet">You have no order yet</string>

    <!--    Spinner Sex-->
    <string-array name="spinner_item_sex">
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>
